--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -33,7 +33,7 @@ code {
   border: 0px none #666;
   font-family: "Source Code Pro", monospace;
   border-radius: 0px;
-  background-color: #ECECEC;
+  background-color: #F1F1F1;
   -webkit-border-radius: 2px;
 }
 
