--- a/assets/scss/colors/light.scss
+++ b/assets/scss/colors/light.scss
@@ -1,5 +1,5 @@
 // by @GabiThume (https://github.com/gabithume)
-$color-background: #e2e0de;
+$color-background: #f7f4eb;
 $color-footer-mobile-1: darken($color-background, 2%);
 $color-footer-mobile-2: darken($color-background, 10%);
 $color-background-code: darken($color-background, 2%);
