Custom css and small post edits

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,9 +2,10 @@
 $font-family-body: "JetBrains Mono", monospace;
 $font-family-mono: "JetBrains Mono", monospace;
 $font-family-tt: "Inconsolata", monospace;
-$font-size: 14px;
-$line-height: 1.725;
-$page-width: 48rem;
+$font-size: 18px;
+$code-font-size: 16px;
+$line-height: 2.725;
+$page-width: 57rem;
 // Logo
 $logo-width: 50px;
 $logo-height: 50px;
