--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,10 +5,8 @@
 body {
   margin: 0;
   height: 100%;
-  color: #363533;
   font-display: swap;
   font-weight: 400;
-  font-size: 18px;
   font-family: "Lora", sans-serif;
   line-height: 1.725;
   text-rendering: geometricPrecision;
@@ -24,7 +22,6 @@ body h1,
 body .h1 {
   display: block;
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
   text-decoration: underline dotted;
   letter-spacing: 0.01em;
   font-weight: 700;
@@ -38,7 +35,6 @@ body .h2 {
   position: relative;
   display: block;
   margin-top: 0.5rem;
-  margin-bottom: 0.2rem;
   text-transform: none;
   letter-spacing: normal;
   font-weight: bold;
@@ -57,6 +53,7 @@ pre {
   overflow-x: auto;
   padding: 10px 15px;
   padding-bottom: 0;
+  background-color: #fff;
   border: 1px dotted #666;
   border-radius: 4px;
   font-size: 16px;
@@ -69,7 +66,6 @@ code {
   border: 0px none #666;
   font-family: "Source Code Pro", monospace;
   border-radius: 0px;
-  background-color: #F1F1F1;
   -webkit-border-radius: 2px;
 }
 .pagination {
@@ -87,7 +83,6 @@ code {
 *:after {
   box-sizing: border-box;
   margin-top: 0rem;
-  margin-bottom: 0.2rem;
 }
 
 #tag-cloud .tag-cloud-title {
